--- a/tests/DevApps/aspnet-mvc/OwinWebApp/OwinWebApp.csproj
+++ b/tests/DevApps/aspnet-mvc/OwinWebApp/OwinWebApp.csproj
@@ -25,6 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
